--- a/style.css
+++ b/style.css
@@ -1,30 +1,48 @@
-*{
+
+
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-h1{
-font-weight: bolder;
-margin-top: 50px;
-font-size: 50px;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-#container{
+
+h1 {
+    font-weight: bolder;
+    margin-top: 50px;
+    font-size: 50px;
+    color: #333;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+}
+
+#container {
     width: 40vw;
     height: 70vh;
     border: 2px solid black;
     border-radius: 10px;
-    display:grid;
+    display: grid;
     gap: 7px;
     padding: 15px;
     margin-top: 50px;
-    background-color: rgba(255, 255, 255,0.8);
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-.subContainer{
+
+.subContainer {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     gap: 7px;
 }
-.subContainer input{
+
+.subContainer input {
     display: block;
     text-align: end;
     font-weight: bolder;
@@ -32,67 +50,188 @@ font-size: 50px;
     width: 100%;
     border-radius: 10px;
     padding-right: 10px;
+    border: 1px solid #ccc;
+    background-color: #fff;
 }
-.subContainer button{
+
+.subContainer button {
     width: 25%;
     border-radius: 10px;
-    background-color:rgba(52, 211, 235, 0.5);
+    background-color: rgba(52, 211, 235, 0.5);
     font-size: 20px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
-.subContainer button:hover{
+
+.subContainer button:hover {
     background-color: rgb(49, 28, 230);
+    color: white;
+    transform: scale(1.02);
 }
-.subContainer .btn{
+
+.subContainer .btn {
     width: 25%;
     border-radius: 10px;
-    background-color:rgb(49, 28, 230);
+    background-color: rgb(49, 28, 230);
     font-size: 40px;
+    color: white;
+}
+
+.subContainer .btn:hover {
+    background-color: rgba(52, 211, 235, 0.5);
+    color: black;
+}
+
+/* Media Queries for Responsive Design */
+@media only screen and (max-width: 1200px) {
+    #container {
+        width: 50vw;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    #container {
+        width: 60vw;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #container {
+        width: 70vw;
+        height: 60vh;
+    }
     
-}
-.subContainer .btn:hover{
-background-color:rgba(52, 211, 235, 0.5);
-}
-/* Responsive Calculator Media Queries */
-
-/* For tablets and small desktops */
-@media (max-width: 900px) {
-  #container {
-    width: 80vw;
-    min-width: 300px;
-    max-width: 400px;
-  }
-  .subContainer button {
-    width: 60px;
-    height: 60px;
-    font-size: 1.2rem;
-  }
+    h1 {
+        font-size: 40px;
+    }
+    
+    .subContainer input {
+        font-size: 32px;
+    }
+    
+    .subContainer button {
+        font-size: 18px;
+    }
 }
 
-/* For mobile devices */
-@media (max-width: 600px) {
-  #container {
-    width: 98vw;
-    min-width: 200px;
-    max-width: 350px;
-    padding: 10px;
-  }
-  .subContainer {
-    display: flex;
-    justify-content: space-between;
-    gap: 5px;
-  }
-  .subContainer button {
-    width: 45px;
-    height: 45px;
-    font-size: 1rem;
-    padding: 0;
-  }
-  input[type="text"] {
-    width: 100%;
-    font-size: 1.1rem;
-    padding: 8px;
-  }
-  h1 {
-    font-size: 1.5rem;
-  }
+@media only screen and (max-width: 600px) {
+    #container {
+        width: 85vw;
+        height: 55vh;
+        padding: 10px;
+    }
+    
+    h1 {
+        font-size: 32px;
+        margin-top: 30px;
+    }
+    
+    .subContainer input {
+        font-size: 28px;
+    }
+    
+    .subContainer button {
+        font-size: 16px;
+    }
+    
+    .subContainer .btn {
+        font-size: 32px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    #container {
+        width: 95vw;
+        height: 50vh;
+    }
+    
+    h1 {
+        font-size: 28px;
+    }
+    
+    .subContainer input {
+        font-size: 24px;
+    }
+    
+    .subContainer button {
+        font-size: 14px;
+    }
+}
+
+
+/* Media Queries for Responsive Design */
+@media only screen and (max-width: 1200px) {
+    #container {
+        width: 50vw;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    #container {
+        width: 60vw;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #container {
+        width: 70vw;
+        height: 60vh;
+    }
+    
+    h1 {
+        font-size: 40px;
+    }
+    
+    .subContainer input {
+        font-size: 32px;
+    }
+    
+    .subContainer button {
+        font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    #container {
+        width: 85vw;
+        height: 55vh;
+        padding: 10px;
+    }
+    
+    h1 {
+        font-size: 32px;
+        margin-top: 30px;
+    }
+    
+    .subContainer input {
+        font-size: 28px;
+    }
+    
+    .subContainer button {
+        font-size: 16px;
+    }
+    
+    .subContainer .btn {
+        font-size: 32px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    #container {
+        width: 95vw;
+        height: 50vh;
+    }
+    
+    h1 {
+        font-size: 28px;
+    }
+    
+    .subContainer input {
+        font-size: 24px;
+    }
+    
+    .subContainer button {
+        font-size: 14px;
+    }
 }
